# sas7bdat-converter

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: linting.yaml  pyp_publish.yml  pypi-publish.yaml  pypi_publish.yml  tests.yaml
sas7bdat_converter/: __init__.py  converter.py
scripts/: lint.sh  test.sh
test/: test_sas7bdat_converter.py
test/data/expected_files/: file1.xlsx  file2.csv  file2.xlsx  file3.xml
test/data/sas7bdat_files/: file1.sas7bdat  file2.sas7bdat
tests/: conftest.py  test_sas7bdat_converter.py
tests/assets/expected_files/: file1.csv  file1.json  file1.parquet  file1.xml  file2.json  file2.parquet  file2.xml  file3.json  file3.parquet  file3.xml
tests/assets/expected_xpt/: file1.csv  file1.json  file1.parquet  file1.xlsx  file1.xml  file2.csv  file2.json  file2.parquet  file2.xlsx  file2.xml
tests/assets/xpt_files/: file1.xpt  file2.xpt
tests/data/expected_files/: file1.json  file3.csv  file3.json  file3.xlsx
tests/data/sas7bdat_files/: file3.sas7bdat
