[tool.poetry]
name = "sas7bdat_converter"
version = "2.0.0"
description = "Convert sas7bdat and xport files into other formats"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sanders41/sas7bdat-converter"
homepage = "https://github.com/sanders41/sas7bdat-converter"
documentation = "https://github.com/sanders41/sas7bdat-converter"
keywords = ["sas", "sas7bdat", "converter", "xpt", "XPort"]
classifiers=[
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
include = ["sas7bdat_converter/py.typed"]

[tool.poetry.dependencies]
python = "^3.8.0"
pandas = ">=1.2.0"
openpyxl = {version = ">=3.0.5", optional = true}
pyarrow = {version = ">=9.0.0", optional = true}

[tool.poetry.extras]
excel = ["openpyxl"]
parquet = ["pyarrow"]
all = ["openpyxl", "pyarrow"]

[tool.poetry.group.dev.dependencies]
black = ">=22.8.0"
mypy = ">=0.981"
pre-commit = ">=2.20.0"
pytest = ">=7.1.3"
pytest-cov = ">=4.0.0"
ruff = ">=0.0.253"
pandas-stubs = ">=2.0.1.230501"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.mypy]
disallow_untyped_defs = true
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=sas7bdat_converter --cov-report term-missing"

[tool.ruff]
select = ["E", "F", "T201", "T203", "I001"]
ignore = ["E501"]
line-length = 100
fix = true
