[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sas7bdat-converter"
description = "Convert sas7bdat and xport files into other formats"
authors = [ { name = "Paul Sanders", email = "paul@paulsanders.dev" } ]
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["sas", "sas7bdat", "converter", "xpt", "XPort"]
classifiers=[
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "pandas>=2.0.0",
]

[project.optional-dependencies]
openpyxl = ["openpyxl>=3.0.5"]
all = ["openpyxl>=3.0.5"]

[dependency-groups]
dev = [
  "mypy[faster-cache]==1.15.0",
  "pre-commit==4.2.0",
  "pytest==8.3.5",
  "pytest-cov==6.1.1",
  "ruff==0.11.11",
  "pandas-stubs==2.2.3.250308",
]

[tool.hatch.version]
path = "sas7bdat_converter/__init__.py"

[project.urls]
repository = "https://github.com/sanders41/sas7bdat-converter"
homepage = "https://github.com/sanders41/sas7bdat-converter"
documentation = "https://github.com/sanders41/sas7bdat-converter"

[tool.mypy]
disallow_untyped_defs = true
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=sas7bdat_converter --cov-report term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.lint]
select=[
  "E",  # pycodestyle
  "B",  # flake8-bugbear
  "W",  # Warning
  "F",  # pyflakes
  "UP",  # pyupgrade
  "I001",  # unsorted-imports
  "T201",  # Don't allow print
  "T203",  # Don't allow pprint
  "RUF022",  # Unsorted __all__
  "RUF023",  # Unforted __slots__
]
ignore=[
  # Recommened ignores by ruff when using formatter
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
